k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka                            # Отдельный ns для Kafka/Strimzi (stateful)
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability                    # Мониторинг/логи (Prometheus/Grafana/Loki)
