k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: prod-app
spec:
  selector:
    app: my-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
                         # Внутрикластерный доступ (внешний — через Ingress/LoadBalancer)
